@@ -1,11 +1,7 @@
 ---
 fixtures:
   repositories:
-    concat:
-      # master is beyond 4.1.1, but has breaking changes to
-      # how fragments are ordered (MODULES-6625)
-      repo: https://github.com/simp/puppetlabs-concat
-      ref: 4.1.1
+    concat: "https://github.com/simp/puppetlabs-concat"
     pki: "https://github.com/simp/pupmod-simp-pki"
     simplib: "https://github.com/simp/pupmod-simp-simplib"
     stdlib: "https://github.com/simp/puppetlabs-stdlib"
